<resources>
    <string name="app_name">TakeHomeDemo</string>
    <string name="guidomia">GUIDOMIA</string>
    <string name="tacoma_2021">Tacoma 2021</string>
    <string name="get_you_now">Get your\'s now</string>
    <string name="point">●</string>
    <string name="price">Price</string>
    <string name="filters">Filters</string>
    <string name="any_make">Any make</string>
    <string name="any_model">Any model</string>
</resources>